Add inactive subframes to the dispatch-to-content region. (bug 1082594, r=tn,kats)